apps/authority/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authority
  namespace: authority
spec:
  hosts:
    - authority.cb-interview.com
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authority.authority.svc.cluster.local
            port:
              number: 8080
